
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-agent-openenv"
version = "0.1.0"
description = "AI Agent environment"
authors = [{name = "Khushi Rai"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
